Adding Jetty library
Using Jetty library approach than using Apache Tomcat, since its require RedHat RSP-CSC extension (VSCode) and its require Java 11 to use that.